# OpenGLMaterials

./: CMakeLists.txt  README.md
assets/resources/: materialproperties.h
assets/shaders/: colors.fs
src/: main.cpp
